[package]
name = "passtru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
itertools = "0.10.5"
rand = "0.8.5"
shiplift = "0.7.0"
tokio = { version = "1.23.0", features = ['full']}
